<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?attr/colourBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            style="@style/dialog_title"
            android:text="@string/purchase_coins_title"/>

        <TextView
            style="@style/dialog_text_label"
            android:text="@string/purchase_get_coins"/>

        <View
            style="@style/divider_across"/>

        <TextView
            style="@style/dialog_text_label"
            android:text="@string/purchase_2500000"/>

        <TextView
            android:id="@+id/purchase_coins_2500000"
            style="@style/dialog_text"
            android:background="@drawable/store_coin_total"/>

        <TextView
            style="@style/dialog_text_label"
            android:text="@string/purchase_500000"/>

        <TextView
            android:id="@+id/purchase_coins_500000"
            style="@style/dialog_text"
            android:background="@drawable/store_coin_total"/>

        <TextView
            style="@style/dialog_text_label"
            android:text="@string/purchase_200000"/>

        <TextView
            android:id="@+id/purchase_coins_200000"
            style="@style/dialog_text"
            android:background="@drawable/store_coin_total"/>

        <TextView
            style="@style/dialog_text_label"
            android:text="@string/purchase_100000"/>

        <TextView
            android:id="@+id/purchase_coins_100000"
            style="@style/dialog_text"
            android:background="@drawable/store_coin_total"/>

        <TextView
            style="@style/dialog_text_label"
            android:text="@string/purchase_50000"/>

        <TextView
            android:id="@+id/purchase_coins_50000"
            style="@style/dialog_text"
            android:background="@drawable/store_coin_total"/>

        <TextView
            style="@style/dialog_text_label"
            android:text="@string/purchase_10000"/>

        <TextView
            android:id="@+id/purchase_coins_10000"
            style="@style/dialog_text"
            android:background="@drawable/store_coin_total"/>

        <TextView
            android:id="@+id/purchase_coins_ok"
            style="@style/dialog_title"
            android:text="@string/dialog_purchase_ok"/>

    </LinearLayout>

</ScrollView>