<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/settings_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colourBackground"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="left|center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/settings_back"
            style="@style/game_options"
            android:src="@drawable/ic_back"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settings_label_sound"
            style="@style/options_label"
            android:text="@string/settings_sound"/>

        <TextView
            android:id="@+id/settings_sound_switch"
            style="@style/options_switch"
            android:text="@string/settings_on"/>

        <View
            android:id="@+id/settings_divider_1"
            style="@style/divider_across"/>

        <TextView
            android:id="@+id/settings_label_vibration"
            style="@style/options_label"
            android:text="@string/settings_vibration"/>

        <TextView
            android:id="@+id/settings_vibration_switch"
            style="@style/options_switch"
            android:text="@string/settings_on"/>

        <View
            android:id="@+id/settings_divider_2"
            style="@style/divider_across"/>

        <TextView
            android:id="@+id/settings_label_colour_blind"
            style="@style/options_label"
            android:text="@string/settings_colour_blind"/>

        <TextView
            android:id="@+id/settings_colour_blind_switch"
            style="@style/options_switch"
            android:text="@string/settings_on"/>

        <View
            android:id="@+id/settings_divider_3"
            style="@style/divider_across"/>

        <TextView
            android:id="@+id/settings_label_light"
            style="@style/options_label"
            android:text="@string/settings_lights"/>

        <TextView
            android:id="@+id/settings_light_switch"
            style="@style/options_switch"
            android:text="@string/settings_on"/>

    </LinearLayout>

</LinearLayout>